objects/ASI_CRM_EventFeedback__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Event Feedbacks</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_EventFeedBack</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Event__c</fullName>
        <label>Event</label>
        <referenceTo>ASI_MFM_Event__c</referenceTo>
        <relationshipLabel>Event Feedbacks</relationshipLabel>
        <relationshipName>ASI_CRM_Event_EventFeedBack</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Feedback__c</fullName>
        <label>Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Improvement__c</fullName>
        <label>Improvement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_EventFeedBack_PGLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POSMDDetails__c</fullName>
        <label>POSM Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_POSMStatus__c</fullName>
        <label>POSM Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipName>ASI_CRM_EventFeedBack_Promoter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <label>Promotion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Event Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Event_Feed_Backs</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Feedback__c</columns>
        <columns>ASI_CRM_Improvement__c</columns>
        <columns>ASI_CRM_Promotion__c</columns>
        <columns>ASI_CRM_Promoter__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_EventFeedback__c.ASI_CRM_VN_EventFeedback</value>
        </filters>
        <label>All VN Event Feed Backs</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EFB-{YY}{000000}</displayFormat>
        <label>Event Feedback No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_EventFeedback</fullName>
        <active>true</active>
        <label>VN Event Feedback</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>